--- a/MachineLearning.ipynb
+++ b/MachineLearning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "339b29f3",
+   "id": "694e6fdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "56d19534",
+   "id": "7d4e1c79",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "181b09d3",
+   "id": "30a8f3d7",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5afcadcc",
+   "id": "ddf6e53c",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "deedb06b",
+   "id": "9496c611",
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2982715c",
+   "id": "497c8a2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c71f6d59",
+   "id": "fe461061",
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "9edbe64a",
+   "id": "852e5966",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1182,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "af08fee0",
+   "id": "fa923646",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "6f12fcbb",
+   "id": "979d2f00",
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "cbf24088",
+   "id": "1fcdc9fd",
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1356,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "585f3988",
+   "id": "4db5586b",
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "7ecd2106",
+   "id": "dd102ca8",
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7b86230d",
+   "id": "9494d6d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1431,7 +1431,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d85a41be",
+   "id": "f769d40f",
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1454,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2e0ad4b0",
+   "id": "67e45335",
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1485,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b9e88faa",
+   "id": "92996de9",
    "metadata": {},
    "outputs": [
     {
@@ -1897,7 +1897,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "37af4007",
+   "id": "ca3c6189",
    "metadata": {},
    "outputs": [
     {
@@ -1922,7 +1922,180 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "765917c1",
+   "id": "77513a76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "\n",
+    "# Create the main window\n",
+    "root = tk.Tk()\n",
+    "\n",
+    "# Create a list of options for the dropdown\n",
+    "options = ['Option 1', 'Option 2', 'Option 3']\n",
+    "\n",
+    "# Create a variable to store the selected option\n",
+    "selected_option = tk.StringVar()\n",
+    "\n",
+    "# Set the default option\n",
+    "selected_option.set(options[0])\n",
+    "\n",
+    "# Create the dropdown menu\n",
+    "dropdown = tk.OptionMenu(root, selected_option, *options)\n",
+    "dropdown.pack()\n",
+    "\n",
+    "# Run the main event loop\n",
+    "root.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34c28d7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "95115aca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import interact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7811cbc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ee17c62cd2ea4b87822c79f729574c75",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Store', options=('name_ALAMEDA (QRO)', 'name_ALLENDE (CELAYA)', 'n…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.store(Store)>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def store(Store): \n",
+    "    return\n",
+    "\n",
+    "interact(store, Store=[ 'name_ALAMEDA (QRO)',\n",
+    "    'name_ALLENDE (CELAYA)',\n",
+    "    'name_ALLENDE (QRO)',\n",
+    "    'name_ANDADOR (CELAYA)',\n",
+    "    'name_ANTEA (QRO)',\n",
+    "    'name_BOULEVARES (QRO)',\n",
+    "    'name_CONSTITUYENTES (QRO)',\n",
+    "    'name_CORREGIDORA 2 (QRO)',\n",
+    "    'name_CORREGIDORA 3 (QRO)',\n",
+    "    'name_CORREGIDORA 4 (QRO)',\n",
+    "    'name_FIESTA (IRAPUATO)',\n",
+    "    'name_GALERIAS (QRO)',\n",
+    "    'name_GUERRERO (QRO)',\n",
+    "    'name_HIDALGO (CELAYA)',\n",
+    "    'name_HIDALGO 2 (CELAYA)',\n",
+    "    'name_LA CRUZ (QRO)',\n",
+    "    'name_LA VICTORIA (QRO)',\n",
+    "    'name_LEON CENTRO (LEON)',\n",
+    "    'name_MADERO (LEON)',\n",
+    "    'name_MADERO (QRO)',\n",
+    "    'name_MAYOREO (QRO)',\n",
+    "    'name_OBREGON (LEON)',\n",
+    "    'name_PARQUE (CELAYA)',\n",
+    "    'name_PARQUE (QRO)',\n",
+    "    'name_PLAZA MAYOR (LEON)',\n",
+    "    'name_PLAZA PATIO (QRO)',\n",
+    "    'name_PORTAL (QRO)',\n",
+    "    'name_URBAN (QRO)',\n",
+    "    'name_VALLARTA (VTA)',\n",
+    "    'name_VIA ALTA SUR (LEON)'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "22a23994",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8ec20c18b24b4d3dbdc1d035098aee2e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Select an option:', options=('Option 1', 'Option 2', 'Option 3'), value='Option 1')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "62f1c52c3cfd40328f67f22050c6bb8a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='Option 1', description='Selected option:')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "\n",
+    "# Define a list of options for the dropdown\n",
+    "options = ['Option 1', 'Option 2', 'Option 3']\n",
+    "\n",
+    "# Create a dropdown widget\n",
+    "dropdown = widgets.Dropdown(options=options, description='Select an option:', value='Option 1')\n",
+    "\n",
+    "# Define a function to be called when the dropdown value changes\n",
+    "def on_dropdown_change(change):\n",
+    "    input_text.value = change.new\n",
+    "\n",
+    "# Attach the function to the dropdown widget\n",
+    "dropdown.observe(on_dropdown_change, names='value')\n",
+    "\n",
+    "# Create a text input widget\n",
+    "input_text = widgets.Text(value='Option 1', description='Selected option:')\n",
+    "\n",
+    "# Display the widgets\n",
+    "display(dropdown)\n",
+    "display(input_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "003b774d",
    "metadata": {},
    "outputs": [],
    "source": []
