--- a/Dropdown list.ipynb
+++ b/Dropdown list.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9bee4dae",
+   "id": "2c59e146",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "be8f7253",
+   "id": "2ddf0e70",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0d647aab",
+   "id": "2fa3758c",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3203847",
+   "id": "d6eadd1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input(brand)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21e7d4d3",
    "metadata": {},
    "outputs": [],
    "source": []
